--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 layout: home
 # Index page
 ---
-{% for post in site.categories.blog %}
-    <div>
-        <a href="{{ post.url }}" ><img src="{{ post.thumbnail }}" />
-        <a href="{{ post.url }}" >{{ post.title }}</a>
-    </div>
-{% endfor %}
+{% if page.image %}
+  <meta property="og:image" content="path/to/post/image.jpg">
+{% else %}
+  <meta property="og:image" content="path/to/page/image.jpg">
+{% endif %}
